# prob_dists

./: .buildinfo  .gitignore  .readthedocs.yaml  README.md  genindex.html  index.html  objects.inv  prob_dists.html  probcalc.html  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: compile-docs.yaml  docstrings.yaml  publish-to-pypi.yaml  tests.yaml
_sources/: index.rst.txt  prob_dists.rst.txt  probcalc.rst.txt
docs/source/: conf.py  index.rst  probcalc.rst
src/prob_dists/: __init__.py  distributions.py  utility.py
src/probcalc/: __init__.py  distribution_classes.py  distributions.py  utility.py
tests/: test_binomial.py  test_distributions.py  test_geometric.py  test_normal.py  test_poisson.py  test_sig_figs.py  test_temp.py
