[metadata]
name = prob_dists
description = Use probability distributions in Python, specifically designed for IPython
author = D. Dyson (DoctorDalek1963)
version = attr:prob_dists.__version__
license = GPLv3
license_file = COPYING
url = https://github.com/DoctorDalek1963/prob_dists
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Operating System :: OS Independent
    License :: GPLv3 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

[options]
packages =
    prob_dists
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0
    mypy>=0.9
    pycodestyle>=2.8
    pydocstyle>=6.1
    pytest>=6.2
    toml>=0.10

[options.package_data]
prob_dists = py.typed

[flake8]
max-line-length = 120

[pycodestyle]
max-line-length = 120
